crates/providers/gemini/tests/snapshots/translate__assistant_role_renamed.snap
---
source: crates/providers/gemini/tests/translate.rs
expression: "&body"
---
{
  "contents": [
    {
      "role": "user",
      "parts": [
        {
          "text": "Hello!"
        }
      ]
    },
    {
      "role": "model",
      "parts": [
        {
          "text": "Hi there!"
        }
      ]
    },
    {
      "role": "user",
      "parts": [
        {
          "text": "How are you?"
        }
      ]
    }
  ],
  "generationConfig": {
    "temperature": 0.7,
    "maxOutputTokens": 1024
  }
}
