crates/providers/gemini/tests/snapshots/translate__assistant_tool_call.snap
---
source: crates/providers/gemini/tests/translate.rs
expression: "&body"
---
{
  "contents": [
    {
      "role": "user",
      "parts": [
        {
          "text": "What's the weather in London?"
        }
      ]
    },
    {
      "role": "model",
      "parts": [
        {
          "functionCall": {
            "name": "get_weather",
            "args": {
              "location": "London"
            }
          }
        }
      ]
    }
  ],
  "generationConfig": {
    "temperature": 0.7,
    "maxOutputTokens": 1024
  }
}
