crates/providers/gemini/tests/snapshots/translate__full_response_with_cached_tokens.snap
---
source: crates/providers/gemini/tests/translate.rs
assertion_line: 794
expression: "&resp"
---
{
  "id": "[id]",
  "object": "chat.completion",
  "created": "[timestamp]",
  "model": "gemini-3.1-pro-002",
  "choices": [
    {
      "index": 0,
      "message": {
        "role": "assistant",
        "content": "Hello! How can I help you today?"
      },
      "finish_reason": "stop"
    }
  ],
  "usage": {
    "prompt_tokens": 100,
    "completion_tokens": 10,
    "total_tokens": 110,
    "cached_tokens": 80,
    "cache_read_input_tokens": 80
  }
}
