crates/providers/gemini/tests/snapshots/translate__multi_turn_with_system.snap
---
source: crates/providers/gemini/tests/translate.rs
expression: "&body"
---
{
  "contents": [
    {
      "role": "user",
      "parts": [
        {
          "text": "Hello!"
        }
      ]
    },
    {
      "role": "model",
      "parts": [
        {
          "text": "Hi there!"
        }
      ]
    },
    {
      "role": "user",
      "parts": [
        {
          "text": "How are you?"
        }
      ]
    }
  ],
  "systemInstruction": {
    "parts": [
      {
        "text": "You are a helpful assistant."
      }
    ]
  },
  "generationConfig": {
    "temperature": 0.7,
    "maxOutputTokens": 1024
  }
}
