crates/providers/gemini/tests/snapshots/translate__multimodal_image_url_to_file_data.snap
---
source: crates/providers/gemini/tests/translate.rs
expression: "&body"
---
{
  "contents": [
    {
      "role": "user",
      "parts": [
        {
          "text": "Describe this image."
        },
        {
          "fileData": {
            "mimeType": "image/jpeg",
            "fileUri": "https://example.com/cat.jpg"
          }
        }
      ]
    }
  ],
  "generationConfig": {
    "temperature": 0.7,
    "maxOutputTokens": 1024
  }
}
