crates/providers/gemini/tests/snapshots/translate__response_function_call_to_tool_calls.snap
---
source: crates/providers/gemini/tests/translate.rs
assertion_line: 633
expression: "&resp"
---
{
  "id": "[id]",
  "object": "chat.completion",
  "created": "[timestamp]",
  "model": "gemini-3.1-pro-002",
  "choices": [
    {
      "index": 0,
      "message": {
        "role": "assistant",
        "tool_calls": [
          {
            "id": "[call_id]",
            "type": "function",
            "function": {
              "name": "get_weather",
              "arguments": "{\"location\":\"London\",\"units\":\"celsius\"}"
            }
          }
        ]
      },
      "finish_reason": "tool_calls"
    }
  ],
  "usage": {
    "prompt_tokens": 50,
    "completion_tokens": 20,
    "total_tokens": 70,
    "cached_tokens": 0,
    "cache_read_input_tokens": 0
  }
}
