crates/providers/gemini/tests/snapshots/translate__response_max_tokens_finish_reason.snap
---
source: crates/providers/gemini/tests/translate.rs
expression: "&resp"
---
{
  "id": "[id]",
  "object": "chat.completion",
  "created": "[timestamp]",
  "model": "gemini-3.5-flash",
  "choices": [
    {
      "index": 0,
      "message": {
        "role": "assistant",
        "content": "Truncated output..."
      },
      "finish_reason": "length"
    }
  ],
  "usage": {
    "prompt_tokens": 10,
    "completion_tokens": 1024,
    "total_tokens": 1034,
    "cached_tokens": 0
  }
}
