crates/providers/gemini/tests/snapshots/translate__tool_choice_auto.snap
---
source: crates/providers/gemini/tests/translate.rs
expression: "&body"
---
{
  "contents": [
    {
      "role": "user",
      "parts": [
        {
          "text": "Help me."
        }
      ]
    }
  ],
  "generationConfig": {
    "temperature": 0.7,
    "maxOutputTokens": 1024
  },
  "toolConfig": {
    "functionCallingConfig": {
      "mode": "AUTO"
    }
  }
}
